adding more stuff

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ryan Z. Wang"
   avatar           : "rzwpfpcropped.jpg"
-  bio              : "Neuroscience, Computer Science, Cognitive Science @ Rice | Goldwater 2023 | Stanford CARE 2021 | he/him/his"
+  bio              : "Neuroscience, Computer Science, Cognitive Science @ Rice | Goldwater 2023 | Stanford CARE Scholar 2021 | he/him/his"
   location         : 
   employer         :
   pubmed           :
