--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ryan Z. Wang"
-  avatar           : "rzwpfpcropped.jpg"
+  avatar           : "rzwpfpcroppedgit.JPG"
   bio              : "Neuroscience, Computer Science, Cognitive Science @ Rice | Goldwater 2023 | Stanford CARE Scholar 2021 | he/him/his"
   location         : 
   employer         :
