--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ryan Z. Wang"
   avatar           : "rzwpfpcroppedgit.JPG"
-  bio              : "Neuroscience, Computer Science, Cognitive Science @ Rice | Goldwater 2023 | Stanford CARE Scholar 2021 | he/him/his"
+  bio              : "BioE PhD @ Stanford | Knight-Hennessy 2024 | NDSEG 2024 | Rice '24 | he/him/his"
   location         : 
   employer         :
   pubmed           :
